--- a/provision/roles/ansible-logstash/tasks/main.yml
+++ b/provision/roles/ansible-logstash/tasks/main.yml
@@ -1,13 +1,16 @@
 ---
 - name: Download and install logstash apt public signing key
   apt_key: url="{{ logstash_signing_key_url }}" state=present
-
+  tags: logstash
 
 - name: Add logstash apt repository definition to apt sources list
   apt_repository: repo="{{ logstash_apt_repo }}" update_cache=yes state=present
+  tags: logstash
 
 - name: Install logstash
   apt: name=logstash state=present
+  tags: logstash
+
 
 - name: Ensure logstash home dir is created
   file:
@@ -16,6 +19,7 @@
     group: "{{ logstash_group }}"
     mode:  0775
     state: directory
+  tags: logstash
 
 - name: Create logstash input config
   template:
@@ -28,6 +32,7 @@
   notify:
     - Validate logstash config
     - Restart logstash
+  tags: logstash
 
 - name: Create logstash filter config
   template:
@@ -40,6 +45,7 @@
   notify:
     - Validate logstash config
     - Restart logstash
+  tags: logstash
 
 - name: Create logstash output config
   template:
@@ -52,6 +58,8 @@
   notify:
     - Validate logstash config
     - Restart logstash
+  tags: logstash
+
 
 - name: add java path into service script
   lineinfile:
@@ -61,6 +69,8 @@
     line: |
         JAVA_HOME={{JAVA_HOME}}
         PATH=$PATH:${JAVA_HOME}/bin
+  tags: logstash
+
   notify:
     - Validate logstash config
     - Restart logstash
@@ -76,6 +86,8 @@
     mode:  0644
   notify:
     - Restart logstash
+  tags: logstash
 
 - name: Start logstash
   service: name=logstash enabled=yes state=started
+  tags: logstash
